2009-06-03  Peter Bloomfield

	Build with threads disabled

	* configure.in: must enable threads to use WebKit.
	* libbalsa/imap-server.c (libbalsa_imap_server_set_username),
	(libbalsa_imap_server_set_host), (libbalsa_imap_server_init),
	(libbalsa_imap_server_finalize), (lb_imap_server_cleanup),
	(get_or_create), (libbalsa_imap_server_get_handle),
	(libbalsa_imap_server_get_handle_with_user),
	(libbalsa_imap_server_release_handle),
	(libbalsa_imap_server_force_disconnect),
	(libbalsa_imap_server_close_all_connections),
	(libbalsa_imap_server_has_free_handles): use macros to manage
	locks.
	* libbalsa/imap/imap_private.h: add TRYLOCK macro.

2009-05-27  Peter Bloomfield

	* src/balsa-mime-widget-callbacks.c
	(balsa_mime_widget_key_press_event): emitting "popup-menu"
	requires the address of the return value.

2006-05-23  Pawel Salek

	* src/balsa-index.[ch]: switch between full and narrow index views.
	* src/main-window.[ch]: switch between ordinary and wide-screen layouts.
	* src/save-restore.c: save the layout as an enum.
	* src/balsa-app.[ch]: set default layout.
	* src/pref-manager.c: main window layout type is a drop-down list now.
	
2009-05-13  Peter Bloomfield

	* src/mailbox-node.c (find_dir), (balsa_mailbox_local_append):
	parent of a top-level mailbox should be the root node.

2009-05-13  Peter Bloomfield

	* src/mailbox-node.c (balsa_mailbox_node_rescan): clear
	mn->scanned, so that we append the subtree.

2009-05-07  Peter Bloomfield

	Implement select thread

	* src/balsa-index.c (balsa_index_select_thread): new method to
	select all messages in thread containing current message.
	* src/balsa-index.h: ditto.
	* src/main-window.c: use it.

2009-05-04  Peter Bloomfield

	Add filter for colorizing messages

	* libbalsa/filter.h: add FILTER_COLOR to FilterActionType enum,
	and FILTER_N_TYPES sentinel.
	* libbalsa/filter.c (libbalsa_filter_mailbox_messages): act on
	it.
	* libbalsa/libbalsa_private.h: add color members to
	LibBalsaMailboxIndexEntry.